traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:1: error: illegal start of simple expression
override def run() {var count:Int=0; for (i<-0 to 6) {for (j<-0 to diag); setPos(diag-j; j); writeMessage(count); count=count+1)}
                                                                        ^TraversalDiagonal:1: error: ')' expected but ';' found.
override def run() {var count:Int=0; for (i<-0 to 6) {for (j<-0 to diag); setPos(diag-j; j); writeMessage(count); count=count+1)}
                                                                                       ^TraversalDiagonal:1: error: ';' expected but ')' found.
override def run() {var count:Int=0; for (i<-0 to 6) {for (j<-0 to diag); setPos(diag-j; j); writeMessage(count); count=count+1)}
                                                                                          ^